--- a/index.html
+++ b/index.html
@@ -2,10 +2,19 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Excursion</title>
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
   </head>
   <body>
-
+<h1></h1>
+<p class="links"></p>
+<p class="movingImage"></p>
+<h1></h1>
+<h2></h2>
+<p class="staticImage"></p>
+<div class="logo"></div>
+<h1></h1>
+<p class="links"></p>
+<div class="bottomHeader"></div>
   </body>
 </html>
