--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
   </head>
   <body>
-<h1></h1>
-<p class="links"></p>
+<h1>Discover hidden places in the world around you</h1>
+<p class="links">Download Excursion (Coming soon!)</p>
 <p class="movingImage"></p>
-<h1></h1>
-<h2></h2>
+<h1>Your personal travel guide</h1>
+<h2>Excursion remembers places you like, and recommends new points of interest around you.</h2>
 <p class="staticImage"></p>
 <div class="logo"></div>
-<h1></h1>
-<p class="links"></p>
-<div class="bottomHeader"></div>
+<h1>Coming soon for iPhone and Android</h1>
+<p class="links">Download Excursion (Coming soon!)</p>
+<div class="bottomHeader">&commat; Excursion</div>
   </body>
 </html>
