--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@
     <link rel="stylesheet" type="text/css" href="resources/css/style.css">
   </head>
   <body>
-<h1>Discover hidden places in the world around you</h1>
-<p class="links">Download Excursion (Coming soon!)</p>
-<p class="movingImage"></p>
-<h1>Your personal travel guide</h1>
-<h2>Excursion remembers places you like, and recommends new points of interest around you.</h2>
-<p class="staticImage"></p>
-<div class="logo"></div>
-<h1>Coming soon for iPhone and Android</h1>
-<p class="links">Download Excursion (Coming soon!)</p>
-<div class="bottomHeader">&commat; Excursion</div>
+<div class="center">
+  <h1>Discover hidden places in the world around you</h1>
+  <p class="links">Download Excursion (Coming soon!)</p>
+  <p class="movingImage"></p>
+  <h2>Your personal travel guide</h2>
+  <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
+  <p class="staticImage"></p>
+  <div class="logo"></div>
+  <h2>Coming soon for iPhone and Android</h2>
+  <p class="links">Download Excursion (Coming soon!)</p>
+  <div class="bottomHeader">&commat; Excursion</div>
+</div>
   </body>
 </html>
