--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
 <div class="center">
   <h1>Discover hidden places in the world around you</h1>
   <p class="links">Download Excursion (Coming soon!)</p>
-  <p class="movingImage"></p>
+  <p class="movingImage">
+    <video autoplay="true" loop>
+    <source src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/videos/excursion.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+    </video>
+  </p>
   <h2>Your personal travel guide</h2>
   <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
-  <p class="staticImage"></p>
-  <div class="logo"></div>
+  <p class="staticImage"><img src="resources/images/camp.jpg"/></p>
+  <div class="logo"><img src="resources/images/phone.png"/></div>
   <h2>Coming soon for iPhone and Android</h2>
   <p class="links">Download Excursion (Coming soon!)</p>
   <div class="bottomHeader">&commat; Excursion</div>
